# eink-vnc

./: .gitignore  Cargo.toml  README.md  einkvnc.code-workspace  fetch-dev-binary.sh  run_emulator.sh  run_local.sh
.github/: release-drafter.yml
.github/workflows/: build.yaml  release.yaml
client/: Cargo.toml  Cross.toml  build.sh  out.txt
client/src/: auth.rs  color.rs  config.rs  device.rs  kobo.rs  lib.rs  main.rs  pixmap.rs  processing.rs  touch.rs
client/src/draw/: draw.rs  kobo.rs  mod.rs  pixmap.rs  util.rs
client/src/framebuffer/: image.rs  kobo1.rs  kobo2.rs  mod.rs
client/src/security/: mod.rs
client/src/touch/: coords.rs  listener.rs  mod.rs  mouse.rs  screen.rs
client/src/vnc/: auth.rs  client.rs  connect.rs  mod.rs
doc/: anonymous-vnc_xstartup  devSetup.md  koboSetup.md
emulator/: Cargo.toml
emulator/src/: localbuffer.rs  main.rs
nickel/: default_client.sh  kill_nickel.sh  nickel_dialog.sh  nickel_vnc  run_alias.sh
