[package]
authors = ["Maxim Marshall <m@zmarshall.nl>"]
name = "einkvnc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "einkvnc"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
clap = "3.2"
lazy_static = "1.4.0"
libc = "0.2.126"
png = "0.17.5"
serde = { version = "1.0.140", features = ["derive"] }
byteorder = "1.4.3"
flate2 = "1.0.24"
nix = "0.24.2"
fxhash = "0.2.1"
evdev-rs = "0.6.1"

[features]
default = ["eink_device"]
eink_device = []
