[package]
authors = ["Reguël Wermelinger <r.wermelinger@gmail.com>"]
name = "emulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "einkvnc-emulator"
path = "src/main.rs"

[dependencies]
einkvnc = { path = "../client" }
anyhow.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
sdl2 = "0.37.0"
ctrlc = "3.4.5"
