[package]
authors = ["Reguël Wermelinger <r.wermelinger@gmail.com>"]
name = "emulator"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "einkvnc-emulator"
path = "src/main.rs"

[dependencies]
display = { path = "../display" }
einkvnc = { path = "../client" }
anyhow = "1.0.95"
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.22"
sdl2 = "0.37.0"
ctrlc = "3.4.5"
